[gd_scene load_steps=4 format=3 uid="uid://bh6fjq58daf2s"]

[ext_resource type="Script" path="res://scripts/play_ui.gd" id="1_hckys"]
[ext_resource type="FontFile" uid="uid://wlpg7r5avxq4" path="res://addons/fonts/Perfect DOS VGA 437.ttf" id="1_ncwp8"]

[sub_resource type="LabelSettings" id="LabelSettings_8r80f"]
font = ExtResource("1_ncwp8")
font_size = 100

[node name="PlayUi" type="CanvasLayer"]
script = ExtResource("1_hckys")

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -365.5
offset_top = 80.0
offset_right = 365.5
offset_bottom = 180.0
grow_horizontal = 2
text = "Enter the UFF
"
label_settings = SubResource("LabelSettings_8r80f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -61.0
offset_right = 229.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ncwp8")
theme_override_font_sizes/font_size = 50
text = "START"

[node name="CustomButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ncwp8")
theme_override_font_sizes/font_size = 50
text = "CUSTOMIZE PLAYER"

[node name="BackButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.5
offset_top = -59.0
offset_right = 60.5
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_ncwp8")
theme_override_font_sizes/font_size = 50
text = "BACK"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CustomButton" to="." method="_on_custom_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
